--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "repository": "https://github.com/sumitprojects/sumit-bootstrap-boilerplate.git",
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "bootswatch": "^4.3.1",
         "datatables.net-autofill-bs4": "^2.3.3",
         "datatables.net-bs4": "^1.10.19",
         "datatables.net-buttons-bs4": "^1.5.6",
