--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Bootstrap Boilterplate
+site_url: https://sumit-bootstrap-boilerplate.readthedocs.io/
 nav:
     - Home: index.md
 theme: readthedocs
